ci: Фикс импортов №2
- Добавлены __init__.py в services и tests
- Явно задан PYTHONPATH=. в GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,7 @@ jobs:
         pip install pytest
 
     - name: Run tests with pytest
+      env:
+        PYTHONPATH: .
       run: |
         python -m pytest
